[gd_scene load_steps=2 format=2]

[ext_resource path="res://ServerRow.gd" type="Script" id=1]

[node name="ServerRow" type="Control"]
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 700, 50 )
script = ExtResource( 1 )

[node name="NameServer" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -7.0
margin_right = 195.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test name"
clip_text = true
max_lines_visible = 1

[node name="Users" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -7.0
margin_right = 116.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "User 1, user 2, test user"
align = 1
clip_text = true
max_lines_visible = 1

[node name="Enter" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -10.0
margin_right = -97.0
margin_bottom = 10.0
text = "Enter"

[node name="Delete" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -10.0
margin_right = -20.0
margin_bottom = 10.0
text = "Delete"

[node name="Deletion" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="request_completed" from="Deletion" to="." method="_on_Delete_request_completed"]
